--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Hello world</title>
+</head>
+<body>
+<h1>Hello World! This is Amazing!</h1>
+</body>
+</html>><head>
+	
+</head>
